--- a/EPAF/recu.ui
+++ b/EPAF/recu.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>956</width>
+    <height>739</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,8 +17,8 @@
    <widget class="QPushButton" name="imprimerButton">
     <property name="geometry">
      <rect>
-      <x>359</x>
-      <y>510</y>
+      <x>319</x>
+      <y>590</y>
       <width>121</width>
       <height>31</height>
      </rect>
@@ -30,8 +30,8 @@
    <widget class="QWidget" name="horizontalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>220</x>
-      <y>179</y>
+      <x>100</x>
+      <y>150</y>
       <width>181</width>
       <height>31</height>
      </rect>
@@ -63,8 +63,8 @@
    <widget class="QWidget" name="verticalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>220</x>
-      <y>100</y>
+      <x>100</x>
+      <y>71</y>
       <width>301</width>
       <height>80</height>
      </rect>
@@ -92,7 +92,7 @@
    <widget class="QLabel" name="Recus">
     <property name="geometry">
      <rect>
-      <x>280</x>
+      <x>320</x>
       <y>20</y>
       <width>271</width>
       <height>31</height>
@@ -115,25 +115,42 @@
    <widget class="QTableView" name="tableView">
     <property name="geometry">
      <rect>
-      <x>220</x>
+      <x>20</x>
       <y>210</y>
-      <width>391</width>
-      <height>291</height>
+      <width>831</width>
+      <height>351</height>
      </rect>
     </property>
    </widget>
+   <zorder>imprimerButton</zorder>
+   <zorder>horizontalLayoutWidget</zorder>
+   <zorder>verticalLayoutWidget</zorder>
+   <zorder>Recus</zorder>
+   <zorder>tableView</zorder>
+   <zorder>Recherche</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
-     <height>20</height>
+     <width>956</width>
+     <height>21</height>
     </rect>
    </property>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QToolBar" name="toolBar">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+  </widget>
  </widget>
  <resources/>
  <connections/>
